Update(scss, add comentarios)

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -32,9 +32,11 @@
     <ion-card button (click)="cardClick()" color="primary" id="open-modal" expand="block">
       <ion-card-header>
         <ion-card-title size="x-small" >Calbuco</ion-card-title><img id="pasajeros" src="../assets/images/4pasajeros.png" alt="4 pasjeros">
-        <ion-card-subtitle style="margin-top: -15px;">Nissan Skyline</ion-card-subtitle>
+        
+        <ion-card-subtitle id="subtitlecard1">Nissan Skyline</ion-card-subtitle>
       </ion-card-header>
-    
+
+      
       <ion-card-content>
         salida 20:00 <br>
         Precio conversable
@@ -84,7 +86,7 @@
     <ion-card button (click)="cardClick()" color="success" id="open-modal-2" expand="block">
       <ion-card-header>
         <ion-card-title size="x-small" >Maullin</ion-card-title><img id="pasajeros" src="../assets/images/2pasajeros.png" alt="4 pasjeros">
-        <ion-card-subtitle style="margin-top: -15px;">ford mustang</ion-card-subtitle>
+        <ion-card-subtitle id="subtitlecard1">ford mustang</ion-card-subtitle>
       </ion-card-header>
     
       <ion-card-content>
@@ -136,7 +138,7 @@
     <ion-card button (click)="cardClick()" color="warning" id="open-modal-3" expand="block">
       <ion-card-header>
         <ion-card-title size="x-small" >Osorno</ion-card-title><img id="pasajeros" src="../assets/images/3pasajeros.png" alt="4 pasjeros">
-        <ion-card-subtitle style="margin-top: -15px;">Audi R8</ion-card-subtitle>
+        <ion-card-subtitle id="subtitlecard1">Audi R8</ion-card-subtitle>
       </ion-card-header>
     
       <ion-card-content>
