--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -2,18 +2,13 @@
   padding-top: 0px;
 }
 
-ion-select {
-  padding: 0px;
-  margin-left: 50px;
+#SelectSede {
+  text-align: center;
+  margin: auto;
 }
 
 #subtitle {
   text-align: center;
-}
-
-ion-select {
-  padding: 0px;
-  margin-left: 50px;
 }
 
 #pasajeros {
