add icon button

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -11,12 +11,14 @@
     <ion-toolbar id="subtoolbar">
       <ion-title size="small"> <!--En el SCSS poner size=small solamente en IOS-->
         <ion-list>
-          <ion-item >
+          <ion-item>
             <ion-select placeholder="Selecciona Sede" id="SelectSede">
               <ion-select-option id="SelectSede" value="PuertoMontt">Puerto Montt</ion-select-option>
               <ion-select-option id="SelectSede" value="Viña del mar">Viña del mar</ion-select-option>
               <ion-select-option id="SelectSede" value="Valparaiso">Valparaiso</ion-select-option>
-            </ion-select>
+            </ion-select><ion-button (click)="onClick()">
+              <ion-icon slot="icon-only" name="map"></ion-icon>
+            </ion-button>
           </ion-item>
         </ion-list>
       </ion-title>
