--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title style="text-align: center;">
-      <img src="../assets/images/duocLogo.png" alt="duocLogo">
+      <img src="../assets/images/duocLogo.png" alt="duocLogo" id="duocLogo">
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -22,9 +22,7 @@
           </ion-item>
         </ion-list>
       </ion-title>
-      <ion-subtitle id="subtitle">
-        <ion-input placeholder="¿a donde deseas ir?"></ion-input>
-      </ion-subtitle>
+        <ion-input placeholder="¿a donde deseas ir?" id="subtitle"></ion-input>
     </ion-toolbar>
   </ion-header>
 
