--- a/src/app/vista-conductor/vista-conductor.page.html
+++ b/src/app/vista-conductor/vista-conductor.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="conductor"></ion-back-button>
+      <ion-back-button></ion-back-button>
     </ion-buttons>
     <ion-title id="titulo">Datos Personales</ion-title>
   </ion-toolbar>
