--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -29,7 +29,7 @@
 
   <div>
 
-    <ion-card button (click)="cardClick()" color="primary" id="open-modal" expand="block">
+    <ion-card button color="primary" id="open-modal" expand="block">
       <ion-card-header>
         <ion-card-title size="x-small" >Calbuco</ion-card-title><img id="pasajeros" src="../assets/images/4pasajeros.png" alt="4 pasjeros">
         
@@ -42,7 +42,7 @@
         Precio conversable
       </ion-card-content>
 
-      <ion-modal trigger="open-modal" (willDismiss)="onWillDismiss($event)">
+      <ion-modal trigger="open-modal">
         <ng-template>
 
           <ion-header>
@@ -52,7 +52,7 @@
               </ion-buttons>
               <ion-title>Calbuco</ion-title>
               <ion-buttons slot="end">
-                <ion-button (click)="confirm()" [strong]="true">Confirm</ion-button>
+                <ion-button  [strong]="true">Confirm</ion-button>
               </ion-buttons>
             </ion-toolbar>
           </ion-header>
@@ -83,7 +83,7 @@
     </ion-card>
 
 
-    <ion-card button (click)="cardClick()" color="success" id="open-modal-2" expand="block">
+    <ion-card button  color="success" id="open-modal-2" expand="block">
       <ion-card-header>
         <ion-card-title size="x-small" >Maullin</ion-card-title><img id="pasajeros" src="../assets/images/2pasajeros.png" alt="4 pasjeros">
         <ion-card-subtitle id="subtitlecard1">ford mustang</ion-card-subtitle>
@@ -94,7 +94,7 @@
         $1200
       </ion-card-content>
 
-      <ion-modal trigger="open-modal-2" (willDismiss)="onWillDismiss($event)">
+      <ion-modal trigger="open-modal-2">
         <ng-template>
 
           <ion-header>
@@ -104,7 +104,7 @@
               </ion-buttons>
               <ion-title>Maullin</ion-title>
               <ion-buttons slot="end">
-                <ion-button (click)="confirm()" [strong]="true">Confirm</ion-button>
+                <ion-button  [strong]="true">Confirm</ion-button>
               </ion-buttons>
             </ion-toolbar>
           </ion-header>
@@ -135,7 +135,7 @@
     </ion-card>
 
 
-    <ion-card button (click)="cardClick()" color="warning" id="open-modal-3" expand="block">
+    <ion-card button color="warning" id="open-modal-3" expand="block">
       <ion-card-header>
         <ion-card-title size="x-small" >Osorno</ion-card-title><img id="pasajeros" src="../assets/images/3pasajeros.png" alt="4 pasjeros">
         <ion-card-subtitle id="subtitlecard1">Audi R8</ion-card-subtitle>
@@ -146,7 +146,7 @@
         $1900
       </ion-card-content>
 
-      <ion-modal trigger="open-modal-3" (willDismiss)="onWillDismiss($event)">
+      <ion-modal trigger="open-modal-3">
         <ng-template>
 
           <ion-header>
@@ -156,7 +156,7 @@
               </ion-buttons>
               <ion-title>Osorno</ion-title>
               <ion-buttons slot="end">
-                <ion-button (click)="confirm()" [strong]="true">Confirm</ion-button>
+                <ion-button  [strong]="true">Confirm</ion-button>
               </ion-buttons>
             </ion-toolbar>
           </ion-header>
@@ -188,7 +188,7 @@
 
     <ion-footer style="position: absolute;">
       <ion-button id="open-modal-agregar" expand="block">Open</ion-button>
-      <ion-modal trigger="open-modal-agregar" (willDismiss)="onWillDismiss($event)">
+      <ion-modal trigger="open-modal-agregar">
         <ng-template>
 
           <ion-header>
