se arreglo errores

--- a/src/app/vista-conductor/vista-conductor.page.html
+++ b/src/app/vista-conductor/vista-conductor.page.html
@@ -54,7 +54,7 @@
     CONFIRMAR
   </ion-button>
   <ion-button id="open-modal-agregar" expand="block">Open</ion-button>
-      <ion-modal trigger="open-modal-agregar" (willDismiss)="onWillDismiss($event)">
+      <ion-modal trigger="open-modal-agregar">
         <ng-template>
 
           <ion-header>
