se arreglo errores

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -16,7 +16,7 @@
               <ion-select-option id="SelectSede" value="PuertoMontt">Puerto Montt</ion-select-option>
               <ion-select-option id="SelectSede" value="Viña del mar">Viña del mar</ion-select-option>
               <ion-select-option id="SelectSede" value="Valparaiso">Valparaiso</ion-select-option>
-            </ion-select><ion-button (click)="onClick()" [routerLink]="['/mapa']">
+            </ion-select><ion-button [routerLink]="['/mapa']">
               <ion-icon slot="icon-only" name="map"></ion-icon>
             </ion-button>
           </ion-item>
