--- a/src/app/mapa/mapa.page.html
+++ b/src/app/mapa/mapa.page.html
@@ -9,10 +9,10 @@
 <ion-content>
   <ion-toolbar id="toolbarMap">
     <ion-buttons slot="start">
-      <ion-button (click)="onClick()" [routerLink]="['/home']">Cancel</ion-button>
+      <ion-button [routerLink]="['/home']">Cancel</ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button (click)="onClick()" [routerLink]="['/home']">Confirmar</ion-button>
+      <ion-button [routerLink]="['/home']">Confirmar</ion-button>
     </ion-buttons>
   </ion-toolbar>
   <div id="map"></div>
