--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,74 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu menuId="main-menu" contentId="main">
+    <ion-content>
+      <div class="menu-header-bg"></div>
+      <div class="header-content">
+      <img src="../assets/images/1pasajero.png" alt="">
+      <ion-label>
+        <h1>Micros</h1>
+        <p>¿Qué población desea ir?</p>
+      </ion-label>
+      </div>
+      <ion-list class= "menu-items" lines="none">
+
+      <ion-menu-toggle>
+        <ion-item routerLink="/home">
+        <ion-icon name="home-outline"></ion-icon>Inicio
+        </ion-item>
+      </ion-menu-toggle>
+
+      <ion-menu-toggle>
+          <ion-item routerLink="/mirasol">
+          <ion-icon name="bus-outline"></ion-icon>Mirasol
+          </ion-item>
+      </ion-menu-toggle>
+
+      <ion-menu-toggle>
+          <ion-item routerLink="/egana">
+            <ion-icon name="compass-outline"></ion-icon>Egaña
+          </ion-item>
+      </ion-menu-toggle>
+
+      <ion-menu-toggle>
+          <ion-item routerLink="/lintz">
+          <ion-icon name="location-outline"></ion-icon>Lintz
+          </ion-item>
+      </ion-menu-toggle>
+
+      <ion-menu-toggle>
+          <ion-item routerLink="/pelluco">
+          <ion-icon name="sunny-outline"></ion-icon>Pelluco
+          </ion-item>
+      </ion-menu-toggle>
+
+      <ion-menu-toggle>
+          <ion-item routerLink="/hospital">
+            <ion-icon name="medkit-outline"></ion-icon>Hospital
+          </ion-item>
+      </ion-menu-toggle>
+
+      <ion-menu-toggle>
+          <ion-item routerLink="/lagunitas">
+            <ion-icon name="business-outline"></ion-icon>Lagunitas
+          </ion-item>
+        </ion-menu-toggle>
+        
+        <div class="linea-division"></div>
+        
+        
+
+        <ion-menu-toggle>
+          <ion-item routerLink="/inicio">
+            <ion-icon name="exit-outline"></ion-icon>Cerrar Sesion
+          </ion-item>
+        </ion-menu-toggle>
+
+      </ion-list>
+      
+      
+    </ion-content>
+
+  </ion-menu>
+
+  <ion-router-outlet id="main"></ion-router-outlet>
 </ion-app>
