--- a/src/app/registropasajero/registropasajero.page.html
+++ b/src/app/registropasajero/registropasajero.page.html
@@ -3,7 +3,7 @@
     <ion-title>Registro</ion-title>
 
     <ion-buttons slot="start">
-  <ion-back-button></ion-back-button>
+  <ion-back-button color="dark"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 
@@ -35,7 +35,7 @@
   <ion-input formControlName="confirmacionPassword" type="password"></ion-input>
 </ion-item>
 
-<ion-button (click)="guardar()"class="ion-margin-top amarrillo1" expand="block">
+<ion-button (click)="guardar()"class="ion-margin-top" color="warning" expand="block">
   Ingresar
 </ion-button>
 
