--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 <ion-app>
+
+
+  <!--MENU LATERAL-->
   <ion-menu menuId="main-menu" contentId="main">
+
     <ion-content>
       <div class="menu-header-bg"></div>
       <div class="header-content">
       <img src="../assets/images/1pasajero.png" alt="">
+
       <ion-label>
         <h1>Micros</h1>
         <p>¿Qué población desea ir?</p>
