--- a/src/app/conductor/conductor.page.html
+++ b/src/app/conductor/conductor.page.html
@@ -10,19 +10,19 @@
 <ion-content class="ion-padding">
   <ion-img src="../assets/images/login.svg"></ion-img>
 
-  <form [formGroup]="formularioSesion">
+  <form [formGroup]="formularioLogin">
 
 <ion-item class="ion-margin-top">
   <ion-label position="floating">Usuario</ion-label>
-  <ion-input></ion-input>
+  <ion-input formControlName="nombre"></ion-input>
 </ion-item>
 
 <ion-item class="ion-margin-top">
   <ion-label position="floating">Contraseña</ion-label>
-  <ion-input type="password"></ion-input>
+  <ion-input formControlName="password" type="password"></ion-input>
 </ion-item>
 
-<ion-button (click)="ingresar()"class="ion-margin-top amarrillo1" expand="block">
+<ion-button (click)="ingresar()" class="ion-margin-top amarrillo1" expand="block">
   Ingresar
 </ion-button>
 
