--- a/src/app/vista-conductor/vista-conductor.page.html
+++ b/src/app/vista-conductor/vista-conductor.page.html
@@ -22,7 +22,7 @@
 
     <ion-item>
       <ion-label position="floating">Correo electronico</ion-label>
-      <ion-input formControlName="correo"></ion-input>
+      <ion-input value="{{ email }}" type="text" readonly="readonly"></ion-input>
     </ion-item>
     
 
