--- a/src/app/conductor/conductor.page.html
+++ b/src/app/conductor/conductor.page.html
@@ -22,11 +22,13 @@
   <ion-input formControlName="password" type="password"></ion-input>
 </ion-item>
 
-<<<<<<< HEAD
+
 <ion-button (click)="ingresar()" class="ion-margin-top amarrillo1" expand="block">
-=======
+
 <ion-button (click)="ingresar()"class="ion-margin-top" color="warning" expand="block">
->>>>>>> 825159813e9de727faf6369e30afbffd490fad84
+
+
+<ion-button (click)="ingresar()"class="ion-margin-top" color="warning" expand="block">
   Ingresar
 </ion-button>
 
