--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,8 +10,7 @@
       <img src="../assets/images/1pasajero.png" alt="">
 
       <ion-label>
-        <h1>Micros</h1>
-        <p>¿Qué población desea ir?</p>
+        <h1>{{ nombre }}</h1>
       </ion-label>
       </div>
       <ion-list class= "menu-items" lines="none">
