--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,7 @@
     <ion-content>
       <div class="menu-header-bg"></div>
       <div class="header-content">
-      <img src="../assets/images/1pasajero.png" alt="">
+      <img src="../assets/images/profileMenu.jpg" alt="FotoPerfil" style="margin-right: 20%;">
 
       <ion-label>
         <h1>{{ nombre }}</h1>
@@ -19,12 +19,6 @@
         <ion-item routerLink="/home">
         <ion-icon name="home-outline"></ion-icon>Inicio
         </ion-item>
-      </ion-menu-toggle>
-
-      <ion-menu-toggle>
-          <ion-item routerLink="/egana">
-            <ion-icon name="compass-outline"></ion-icon>Egaña
-          </ion-item>
       </ion-menu-toggle>
 
       <ion-menu-toggle>
