--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
       </ion-menu-toggle>
 
       <ion-menu-toggle>
-        <ion-item>
+        <ion-item routerLink="/cuenta">
           <ion-icon name="person-circle-outline"></ion-icon>Cuenta
         </ion-item>
     </ion-menu-toggle>
