--- a/src/app/vista-conductor/vista-conductor.page.html
+++ b/src/app/vista-conductor/vista-conductor.page.html
@@ -31,7 +31,7 @@
 
           <ion-select multiple="false" placeholder="Select Carrera" formControlName="carrera">
             <ion-select-option value="Auditoria">Auditoria</ion-select-option>
-            <ion-select-option value="TurismoYhoteleria">Turismo y Hotelería</ion-select-option>
+            <ion-select-option value="Turismo y hoteleria">Turismo y Hotelería</ion-select-option>
             <ion-select-option value="Ing.Informatica">Ingeniería en Informática</ion-select-option>
           </ion-select>
 
@@ -42,8 +42,8 @@
 
         <ion-select multiple="false" placeholder="Select Sede" formControlName="sede">
           <ion-select-option value="Valparaiso">Valparaiso</ion-select-option>
-          <ion-select-option value="VinaDelMar">Viña del Mar</ion-select-option>
-          <ion-select-option value="PuertoMontt">Puerto Montt</ion-select-option>
+          <ion-select-option value="Viña Del Mar">Viña del Mar</ion-select-option>
+          <ion-select-option value="Puerto Montt">Puerto Montt</ion-select-option>
         </ion-select>
         
     </ion-item>
