--- a/src/app/vehiculo/vehiculo.page.html
+++ b/src/app/vehiculo/vehiculo.page.html
@@ -11,7 +11,7 @@
   <ion-header>
     <ion-toolbar>
       <ion-buttons slot="start">
-        <ion-button (click)="volverInicio()">Cancel</ion-button>
+        <ion-back-button></ion-back-button>
       </ion-buttons>
       <ion-title style="text-align: center;">Datos<br>Vehiculo</ion-title>
       <ion-buttons slot="end">
@@ -36,17 +36,17 @@
       <ion-input type="text" placeholder="Ej: V16" #txtModelo></ion-input>
     </ion-item>
 
-    
+    <!--
     <ion-footer>
-      <ion-toolbar> <!-- 
+      <ion-toolbar>
         <ion-buttons slot="start">
           <ion-button (click)="Listar()">Listar</ion-button>
         </ion-buttons>    -->             
-        <ion-buttons slot="end">
+       <!-- <ion-buttons slot="end">
           <ion-button (click)="buscar(txtMatricula)">Buscar</ion-button>
         </ion-buttons>
       </ion-toolbar>
-    </ion-footer>
+    </ion-footer> -->
 
       <ion-card color="danger" *ngIf="matricula">
 
