--- a/src/app/home-conductor/home-conductor.page.html
+++ b/src/app/home-conductor/home-conductor.page.html
@@ -13,4 +13,37 @@
 
 <ion-content>
 
+  <ion-card>
+    <ion-card-content>
+
+      <form [formGroup]="formularioAnuncio" (ngSubmit)="guardarDatos()">
+
+        <ion-item>
+          <ion-label position="floating">Destino</ion-label>
+          <ion-input type="text" placeholder="Awesome Input" formControlName="destino"></ion-input>
+        </ion-item>
+
+        <ion-item>
+          <ion-label>Hora de salida:</ion-label>
+          <ion-input type="time" name="" formControlName="horaSalida"></ion-input>
+        </ion-item>
+        
+        <ion-item>
+          <ion-label position="floating">Precio</ion-label>
+          <ion-input type="number" placeholder="Awesome Input" formControlName="precio">$</ion-input>
+        </ion-item>
+
+      </form>
+
+      <ion-button (click)="guardarDatos()" expand="block" fill="clear" shape="round">
+        Siguiente
+      </ion-button>
+
+      <ion-textarea></ion-textarea>
+
+    </ion-card-content>
+  </ion-card>
+
+
+
 </ion-content>
