--- a/src/app/conductor/conductor.page.html
+++ b/src/app/conductor/conductor.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar>
     <ion-title>Conductor</ion-title>
     <ion-buttons slot="start">
-    <ion-back-button color="dark"></ion-back-button>
+    <ion-back-button color="dark" routerLink="/inicio"></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
