--- a/src/app/vista-conductor/vista-conductor.page.scss
+++ b/src/app/vista-conductor/vista-conductor.page.scss
@@ -6,7 +6,7 @@
 
 ion-content{
     --background: linear-gradient(0deg, rgba(0,0,0,0.7), rgba(0,0,0,0.1)),
-    url("/assets/images/duoc.jpg") no-repeat center center / cover;
+    url("/assets/images/fondo.jpg") no-repeat center center / cover;
 } 
 
 .login-section {
